--- a/Quietum Plus/.htaccess
+++ b/Quietum Plus/.htaccess
@@ -2,12 +2,8 @@ Options All -Indexes
 
 DirectoryIndex index.php index.htm index.html
 
-RewriteEngine on
-RewriteBase /
-
 RewriteEngine On
-RewriteBase /
-RewriteCond %{HTTP_HOST} ^www\.(.*)$ [NC]
-RewriteRule ^(.*)$ https://%1/$1[R=301,L]
+RewriteCond %{HTTP_HOST} ^www.usa-quietumplus-usa.us [NC]
+RewriteRule ^(.*)$ http://usa-quietumplus-usa.us/$1 [L,R=301]
 
 ErrorDocument 404 https://usa-quietumplus-usa.us
