--- a/Quietum Plus/.htaccess
+++ b/Quietum Plus/.htaccess
@@ -3,7 +3,7 @@ Options All -Indexes
 DirectoryIndex index.php index.htm index.html
 
 RewriteEngine On
-RewriteCond %{HTTP_HOST} ^www.usa-quietumplus-usa.us [NC]
-RewriteRule ^(.*)$ http://usa-quietumplus-usa.us/$1 [L,R=301]
+RewriteCond %{HTTP_HOST} !^usa-quietumplus-usa.us$
+RewriteRule ^(.*)$ https://usa-quietumplus-usa.us/$1 [R=301,L]
 
 ErrorDocument 404 https://usa-quietumplus-usa.us
